# Amplify

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  restart-services.bat  restart-services.ps1
docs/: architecture.md  jobs.md  (+4 more)
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py  002_project_content_drafts.py  003_project_speaker_display_name.py  004_project_source_fields.py  005_speakers_table.py  006_publish_workspace.py  007_multi_tenancy_auth.py
services/api/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  queue.py  schemas.py
services/api/app/lib/: content_generation.py  facebook.py  facebook_publishing.py  fastcap_bridge.py  fastcap_clip_analysis.py  instagram.py  instagram_publishing.py  job_events.py  llm.py  meta_credentials.py  prompt_settings.py  tiktok.py  tiktok_publishing.py  transcript_analysis.py  wix_blog.py  youtube.py  youtube_publishing.py
services/api/app/lib/fastcap_runtime/: __init__.py  llm_moment_ranker.py
services/api/app/routers/: admin.py  auth.py  automation.py  clips.py  content.py  dev.py  jobs.py  media.py  projects.py  publish_workspace.py  publishing.py  settings.py  speakers.py  team.py  transcript.py  trim.py  uploads.py  worker_internal.py
services/api/scripts/: check_db.py  youtube_oauth_helper.py
services/worker/: pyproject.toml  run.py
services/worker/worker/: __init__.py  config.py  main.py
services/worker/worker/tasks/: transcribe.py  transcribe_arq.py  trim.py  youtube_import.py
(+97 files in other folders)
